common-applications/control/paste/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paste-service
  namespace: paste
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: paste
  type: ClusterIP
