common-applications/control/paste/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: repo-nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* ^/[0-9a-zA-Z.?]+$ {
        if ( !-e $request_filename ) {
          return 403;
          break;
        }
      }
  name: openeuler-paste-ingress
  namespace: paste
spec:
  tls:
    - hosts:
        - paste.openeuler.org
      secretName: paste-openeuler-tls
  rules:
    - host: paste.openeuler.org
      http:
        paths:
          - backend:
              serviceName: paste-service
              servicePort: 80
            path: /
